--- a/appsanator/main/templates/main/about.html
+++ b/appsanator/main/templates/main/about.html
@@ -58,23 +58,23 @@
 
 <div class="row">
     <div class="col">
-        <a class="btn" href="{% url 'home' %}">Главная</a>
+        <a class="btn" href="{% url 'home' %}">Правила</a>
     </div>
     <div class="col">
-        <a class="btn" href="{% url 'home' %}">Главная</a>
-    </div>
-</div>
-<div class="row">
-    <div class="col">
-        <a class="btn" href="{% url 'home' %}">Главная</a>
-    </div>
-    <div class="col">
-        <a class="btn" href="{% url 'home' %}">Книжка</a>
+        <a class="btn" href="{% url 'book' %}">Книжка</a>
     </div>
 </div>
 <div class="row">
     <div class="col">
-        <a class="btn" href="{% url 'home' %}">Афиша</a>
+        <a class="btn" href="{% url 'home' %}">Услуги</a>
+    </div>
+    <div class="col">
+        <a class="btn" href="{% url 'shema' %}">Схема</a>
+    </div>
+</div>
+<div class="row">
+    <div class="col">
+        <a class="btn" href="{% url 'afisha' %}">Афиша</a>
     </div>
     <div class="col">
         <a class="btn" href="{% url 'home' %}">связь</a>
