--- a/appsanator/main/templates/main/index.html
+++ b/appsanator/main/templates/main/index.html
@@ -6,7 +6,7 @@
 
 
 {% block content %}
-    <h1>Главная страница</h1>
+    <h1>Правила</h1>
     <div>
         {% for el in news %}
             <div>
